package io.github.kishigaki.calculatorapp.application.calculator

enum class Key(val text: String) {
    POINT("."),
    ZERO("0"),
    ONE("1"),
    TWO("2"),
    THREE("3"),
    FOUR("4"),
    FIVE("5"),
    SIX("6"),
    SEVEN("7"),
    EIGHT("8"),
    NINE("9"),
    PLUS("+"),
    MINUS("-"),
    TIMES("*"),
    DIVIDE("/"),
    OPEN_PARENTHESIS("("),
    CLOSE_PARENTHESIS(")"),
    DELETE("⌫"),
    EQUAL("="),
    ALL_CLEAR("AC"),
    LEFT("←"),
    RIGHT("→"),
}